# myhelper-server

./: .env.sample  .gitignore  README.md  docker-compose.yaml  dockerfile  pyproject.toml
src/api/auth/: auth.py  permissions.py  serializers.py  urls.py  views.py
src/apps/cashHelper/: apps.py
src/config/: asgi.py  settings.py  urls.py  wsgi.py
